Fixed tabs overlapping in modal

--- a/zero-contact/css/achievements.css
+++ b/zero-contact/css/achievements.css
@@ -11,3 +11,7 @@
 ul.nav {
     margin-bottom: 10px;
 }
+
+.modal *, *::before, *::after {
+  box-sizing: border-box;
+}
